; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_wfdlgs2.c_FillSimpleVersion.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_wfdlgs2.c_FillSimpleVersion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@IDD_VERSION = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@szLegalCopyright = common dso_local global i32 0, align 4
@IDD_COPYRIGHT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @FillSimpleVersion(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %6 = load i32, i32* @TRUE, align 4
  store i32 %6, i32* %5, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @IDD_VERSION, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @SetDlgItemText(i32 %10, i32 %11, i32* %12)
  br label %18

14:                                               ; preds = %2
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @DisableVersionCtls(i32 %15)
  %17 = load i32, i32* @FALSE, align 4
  store i32 %17, i32* %5, align 4
  br label %18

18:                                               ; preds = %14, %9
  %19 = load i32, i32* @szLegalCopyright, align 4
  %20 = call i32* @GetVersionDatum(i32 %19)
  store i32* %20, i32** %4, align 8
  %21 = load i32*, i32** %4, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %23, label %28

23:                                               ; preds = %18
  %24 = load i32, i32* %3, align 4
  %25 = load i32, i32* @IDD_COPYRIGHT, align 4
  %26 = load i32*, i32** %4, align 8
  %27 = call i32 @SetDlgItemText(i32 %24, i32 %25, i32* %26)
  br label %28

28:                                               ; preds = %23, %18
  %29 = load i32, i32* %5, align 4
  ret i32 %29
}

declare dso_local i32 @SetDlgItemText(i32, i32, i32*) #1

declare dso_local i32 @DisableVersionCtls(i32) #1

declare dso_local i32* @GetVersionDatum(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
